--- a/about.html
+++ b/about.html
@@ -45,10 +45,11 @@
                                 d="M925.036 57.197h-304c-27.6 0-50 22.4-50 50v304c0 27.601 22.4 50 50 50h145.5c-1.9 79.601-20.4 143.3-55.4 191.2-27.6 37.8-69.399 69.1-125.3 93.8-25.7 11.3-36.8 41.7-24.8 67.101l36 76c11.6 24.399 40.3 35.1 65.1 24.399 66.2-28.6 122.101-64.8 167.7-108.8 55.601-53.7 93.7-114.3 114.3-181.9 20.601-67.6 30.9-159.8 30.9-276.8v-239c0-27.599-22.401-50-50-50zM106.036 913.497c65.4-28.5 121-64.699 166.9-108.6 56.1-53.7 94.4-114.1 115-181.2 20.6-67.1 30.899-159.6 30.899-277.5v-239c0-27.6-22.399-50-50-50h-304c-27.6 0-50 22.4-50 50v304c0 27.601 22.4 50 50 50h145.5c-1.9 79.601-20.4 143.3-55.4 191.2-27.6 37.8-69.4 69.1-125.3 93.8-25.7 11.3-36.8 41.7-24.8 67.101l35.9 75.8c11.601 24.399 40.501 35.2 65.301 24.399z">
                             </path>
                         </svg>
-                        <p class="leading-relaxed mb-6">I am Ankit Pratap Samrat.<br> A software developer, leaner &
-                            coder. I love to work on products that makes a quite significant positive impact on day to day
-                            lives of people. I have experience in both frontend & backend development. One of my
-                            interests are learning.</p>
+                        <p class="leading-relaxed mb-6">"Greetings, I'm Ankit Pratap Samrat, a passionate software
+                            developer with a flair for both frontend and backend development. My enthusiasm for creating
+                            impactful products that enhance people's daily lives drives my work. Constantly evolving, I
+                            am committed to learning and improving my skills, exploring new technologies to stay at the
+                            forefront of my field.</p>
                         <a class="inline-flex items-center">
                             <span class="flex-grow flex flex-col pl-4">
                                 <span class="title-font font-medium text-gray-900">Ankit Pratap Samrat</span>
@@ -65,12 +66,9 @@
                                 d="M925.036 57.197h-304c-27.6 0-50 22.4-50 50v304c0 27.601 22.4 50 50 50h145.5c-1.9 79.601-20.4 143.3-55.4 191.2-27.6 37.8-69.399 69.1-125.3 93.8-25.7 11.3-36.8 41.7-24.8 67.101l36 76c11.6 24.399 40.3 35.1 65.1 24.399 66.2-28.6 122.101-64.8 167.7-108.8 55.601-53.7 93.7-114.3 114.3-181.9 20.601-67.6 30.9-159.8 30.9-276.8v-239c0-27.599-22.401-50-50-50zM106.036 913.497c65.4-28.5 121-64.699 166.9-108.6 56.1-53.7 94.4-114.1 115-181.2 20.6-67.1 30.899-159.6 30.899-277.5v-239c0-27.6-22.399-50-50-50h-304c-27.6 0-50 22.4-50 50v304c0 27.601 22.4 50 50 50h145.5c-1.9 79.601-20.4 143.3-55.4 191.2-27.6 37.8-69.4 69.1-125.3 93.8-25.7 11.3-36.8 41.7-24.8 67.101l35.9 75.8c11.601 24.399 40.501 35.2 65.301 24.399z">
                             </path>
                         </svg>
-                        <p class="leading-relaxed mb-6">I always love to learn new technologies & keep improving my
-                            skills. Other than coding I love travelling, swimming, playing mobile games, watching movies,
-                            watching comedy
-                            shows, singing song & helping others in the community. I am also a strong believer
-                            of Financial Independence. I have already started working on products that will make
-                            that happen.</p>
+                        <p class="leading-relaxed mb-6">Beyond coding, my interests span a wide spectrum—I find joy in
+                            traveling, swimming, playing mobile games, watching movies, indulging in comedy shows. I'm
+                            equally dedicated to community service, always eager to lend a helping hand.</p>
                         <a class="inline-flex items-center">
                             <span class="flex-grow flex flex-col pl-4">
                                 <span class="title-font font-medium text-gray-900">Ankit Pratap Samrat</span>
