--- a/index.html
+++ b/index.html
@@ -39,13 +39,14 @@
                 class="lg:flex-grow md:w-1/2 lg:pr-24 md:pr-16 flex flex-col md:items-start md:text-left mb-16 md:mb-0 items-center text-center">
                 <h1 class="title-font sm:text-4xl text-3xl mb-4 font-medium text-blue-900">Ankit Pratap Samrat
                 </h1>
-                <p class="mb-10 leading-relaxed">Hi! I am a software engineer, learner & coder. currently, I am working
-                    at <a href="https://www.bennysave.com/" style="color: blue; text-decoration: underline;"
-                        target="_blank">benny</a>
+                <p class="mb-10 leading-relaxed">Hello there! I'm a passionate learner, and proficient coder. Currently,
+                    I contribute my skills and expertise as a software developer at
+                    <a href="https://www.bennysave.com/" style="color: blue; text-decoration: underline;"
+                        target="_blank">Benny</a>
 
                     <!-- <a href=https://ankitpsamrat.netlify.app/" style="color: blue; text-decoration: underline; "
                         target="_blank></a>  -->
-                    as a software developer.
+                    Let's explore the exciting world of technology together!.
                 </p>
                 <div class=" flex justify-center">
                     <!-- <button
@@ -151,12 +152,13 @@
                         d="M925.036 57.197h-304c-27.6 0-50 22.4-50 50v304c0 27.601 22.4 50 50 50h145.5c-1.9 79.601-20.4 143.3-55.4 191.2-27.6 37.8-69.399 69.1-125.3 93.8-25.7 11.3-36.8 41.7-24.8 67.101l36 76c11.6 24.399 40.3 35.1 65.1 24.399 66.2-28.6 122.101-64.8 167.7-108.8 55.601-53.7 93.7-114.3 114.3-181.9 20.601-67.6 30.9-159.8 30.9-276.8v-239c0-27.599-22.401-50-50-50zM106.036 913.497c65.4-28.5 121-64.699 166.9-108.6 56.1-53.7 94.4-114.1 115-181.2 20.6-67.1 30.899-159.6 30.899-277.5v-239c0-27.6-22.399-50-50-50h-304c-27.6 0-50 22.4-50 50v304c0 27.601 22.4 50 50 50h145.5c-1.9 79.601-20.4 143.3-55.4 191.2-27.6 37.8-69.4 69.1-125.3 93.8-25.7 11.3-36.8 41.7-24.8 67.101l35.9 75.8c11.601 24.399 40.501 35.2 65.301 24.399z">
                     </path>
                 </svg>
-                <p class="leading-relaxed text-lg">I am grateful for all the amazing teachers who have guided me and
-                    imparted knowledge and values that have shaped who I am today. They have played a pivotal role in my
-                    growth, and I owe them a debt of gratitude. I am also thankful to my family, younger brother, and
-                    friends, who have provided unwavering support, encouragement, and valuable insights that have helped
-                    me navigate through life's challenges. Their guidance and support have been instrumental in my
-                    personal and professional development, and I will forever cherish their contributions.</p>
+                <p class="leading-relaxed text-lg">I extend my heartfelt thanks to the exceptional teachers who have
+                    been instrumental in shaping both my knowledge and character. Their guidance has played a pivotal
+                    role in my growth, and I am truly indebted to them. My gratitude also extends to my family, younger
+                    brother, and friends for their unwavering support, encouragement, and invaluable insights that have
+                    helped me navigate life's challenges. Their guidance has been a cornerstone in my personal and
+                    professional development, and I will forever cherish the significant impact they've had on my
+                    journey.</p>
                 <span class="inline-block h-1 w-10 rounded bg-indigo-500 mt-8 mb-6"></span>
                 <h2 class="text-blue-900 font-medium title-font tracking-wider text-lg">Ankit Pratap Samrat</h2>
                 <p class="text-gray-500">Software Engineer</p>
