--- a/contact.html
+++ b/contact.html
@@ -39,7 +39,7 @@
                 class="lg:w-2/3 md:w-1/2 bg-gray-300 rounded-lg overflow-hidden sm:mr-10 p-10 flex items-end justify-start relative">
                 <iframe width="100%" height="100%" class="absolute inset-0" frameborder="0" title="map" marginheight="0"
                     marginwidth="0" scrolling="no"
-                    src="https://maps.google.com/maps?width=100%&height=600&hl=en&q=%C4%B0zmir+(My%20Business%20Name)&ie=UTF8&t=&z=14&iwloc=B&output=embed"
+                    src="https://maps.google.com/maps?width=100%&height=600&hl=en&q=Varanasi%20Uttar%20Pradesh%20India&ie=UTF8&t=&z=14&iwloc=B&output=embed"
                     style="filter: grayscale(1) contrast(1.2) opacity(0.4);"></iframe>
                 <div class="bg-white relative flex flex-wrap py-6 rounded shadow-md">
                     <div class="lg:w-1/2 px-6">
