--- a/contact.html
+++ b/contact.html
@@ -86,7 +86,7 @@
     <footer class="text-gray-600 body-font">
         <div class="container px-5 py-4 mx-auto flex items-center sm:flex-row flex-col">
             <p class="text-sm text-gray-500 sm:ml-4 sm:pl-4 sm:border-l-2 sm:border-gray-200 sm:py-1 sm:mt-0 mt-2">
-                © 2021 TERMS & POLICY
+                © 2025 TERMS & POLICY
             </p>
             <span class="inline-flex sm:ml-auto sm:mt-0 mt-2 justify-center sm:justify-start">
                 <a class="text-blue-500" href="https://www.facebook.com/ankitpsamrat" target="_blank">
@@ -95,7 +95,7 @@
                         <path d="M18 2h-3a5 5 0 00-5 5v3H7v4h3v8h4v-8h3l1-4h-4V7a1 1 0 011-1h3z"></path>
                     </svg>
                 </a>
-                <a class="ml-3 text-blue-500" href="https://www.twitter.com/ankitpsamrat" target="_blank">
+                <a class="ml-3 text-black-500" href="https://www.twitter.com/ankitpsamrat" target="_blank">
                     <svg fill="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
                         class="w-6 h-6" viewBox="0 0 24 24">
                         <path
@@ -117,6 +117,15 @@
                             d="M16 8a6 6 0 016 6v7h-4v-7a2 2 0 00-2-2 2 2 0 00-2 2v7h-4v-7a6 6 0 016-6zM2 9h4v12H2z">
                         </path>
                         <circle cx="4" cy="4" r="2" stroke="none"></circle>
+                    </svg>
+                </a>
+                <a class="ml-3 text-black-500" href="https://github.com/ankitpsamrat" target="_blank"
+                    rel="noopener noreferrer">
+                    <svg fill="currentColor" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round"
+                        stroke-width="0" class="w-6 h-6" viewBox="0 0 24 24">
+                        <path stroke="none"
+                            d="M12 0.5C5.37 0.5 0 5.87 0 12.5C0 17.98 3.44 22.63 8.21 24c0.6 0.11 0.82-0.26 0.82-0.58 0-0.29-0.01-1.05-0.02-2.06-3.34 0.73-4.04-1.61-4.04-1.61-0.55-1.4-1.34-1.77-1.34-1.77-1.09-0.75 0.08-0.73 0.08-0.73 1.2 0.09 1.84 1.23 1.84 1.23 1.07 1.83 2.8 1.3 3.49 0.99 0.11-0.78 0.42-1.3 0.76-1.6-2.66-0.3-5.47-1.33-5.47-5.92 0-1.31 0.47-2.38 1.24-3.22-0.12-0.3-0.54-1.52 0.12-3.17 0 0 1.01-0.32 3.3 1.23 0.96-0.27 1.99-0.41 3.01-0.41s2.05 0.14 3.01 0.41c2.29-1.55 3.3-1.23 3.3-1.23 0.66 1.65 0.24 2.87 0.12 3.17 0.77 0.84 1.24 1.91 1.24 3.22 0 4.6-2.81 5.61-5.49 5.91 0.43 0.37 0.81 1.1 0.81 2.22 0 1.6-0.01 2.89-0.01 3.28 0 0.32 0.22 0.7 0.83 0.58C20.56 22.63 24 17.98 24 12.5 24 5.87 18.63 0.5 12 0.5z">
+                        </path>
                     </svg>
                 </a>
             </span>
