--- a/index.html
+++ b/index.html
@@ -55,9 +55,9 @@
                     </button> -->
                 </div>
             </div>
-            <div class="lg:max-w-md lg:w-full md:w-1/2 w-5/6">
+            <!-- <div class="lg:max-w-md lg:w-full md:w-1/2 w-5/6">
                 <img class="object-cover object-center rounded" alt="hero" src="my pic.jpg">
-            </div>
+            </div> -->
         </div>
     </section>
     <hr>
@@ -77,7 +77,7 @@
                     </div>
                     <div class="flex-grow sm:pl-6 mt-6 sm:mt-0">
                         <h2 class="font-medium title-font text-gray-900 mb-1 text-xl">Education</h2>
-                        <p class="leading-relaxed">BCA from Mahatma Gandhi Kashi Vidyapith(2019-22). <br>Varanasi,
+                        <p class="leading-relaxed">BCA from Mahatma Gandhi Kashi Vidyapith. <br>Varanasi,
                             Uttar
                             Pradesh,
                             India.</p>
